--- a/Views/Test/Index.cshtml
+++ b/Views/Test/Index.cshtml
@@ -7,6 +7,7 @@
     var name = ViewBag.Name;
     var requestFeatures = Context.Features.Get<IRequestCultureFeature>();
 }
+<a asp-controller="Test" asp-action="Create" class="btn btn-primary">Create</a>
 <table class="table table-striped">
     <thead>
     <tr>
